--- a/app/components/search/styles/SearchExample.scss
+++ b/app/components/search/styles/SearchExample.scss
@@ -2,5 +2,15 @@
   width: 100%;
   > div:first-of-type {
     width: 100%;
+    > input {
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+      transition: box-shadow 0.2s ease-in-out;
+    }
+    > input:hover {
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    }
+    > input:focus {
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    }
   }
 }
